logs/Slang/chapter-5/5.13-builtin-methods-strings.sv.log
name: builtin-methods-string
description: Check if built-in methods can be called
should_fail: 0
tags: 5.13
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.13-builtin-methods-strings.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.13-builtin-methods-strings.sv:11:37: error: invalid member access for type 'string'
    $display("length check: %d\n", a.len());
                                   ~^~~~
